# Anemoia-Client

./: .last_build_tree  Cargo.toml  README.md  build.sh  install.sh
.github/workflows/: release.yml
agent_loader/: Cargo.toml
agent_loader/src/: lib.rs
client/: Cargo.toml  build.rs
client/java/: AnemoiaInterceptor.java
client/java/netty_stubs/io/netty/channel/: ChannelDuplexHandler.java  ChannelHandler.java  ChannelHandlerContext.java  ChannelInboundHandlerAdapter.java  ChannelOutboundHandler.java  ChannelPromise.java
client/src/: config.rs  glfw.rs  hook.rs  hotkeys.rs  jvm.rs  lib.rs  lua_engine.rs  packet_capture.rs  zulip.rs
client/src/gui/: mod.rs
client/src/lua_api/: http.rs  item.rs  mod.rs  packet.rs  player.rs  render.rs  world.rs
client/src/mc/: item.rs  minecraft.rs  mod.rs  netty.rs  packet.rs  player.rs  reflect.rs  window.rs  world.rs
injector/: Cargo.toml
injector/src/: main.rs
injector/src/platform/: mod.rs  unix.rs
launcher/: Cargo.toml
launcher/src/: main.rs
scripts/: example_sprint.lua
scripts/combat/: Aimbot.lua  AutoArmor.lua  AutoClicker.lua  Criticals.lua  Example_KillAura.lua  HitSelect.lua  KeepSprint.lua  KillAura.lua  SilentAura.lua  Velocity.lua  WTap.lua
scripts/misc/: AntiBot.lua  FakeLag.lua  PacketLogger.lua  ZulipBridge.lua
scripts/misc/zulip-bridge/: adapter.lua  module.lua  ui.lua
scripts/movement/: AirJump.lua  HighJump.lua  LiquidWalk.lua  NoSlow.lua  NoWeb.lua  Spider.lua  Sprint.lua  Step.lua
scripts/player/: AntiAFK.lua  AutoRespawn.lua  ChestStealer.lua  FastUse.lua  FreeCam.lua  NoFall.lua  NoPitchLimit.lua  Reach.lua
scripts/render/: AntiBlind.lua  ESP.lua  FullBright.lua  Nametags.lua  Radar.lua  Tracers.lua
scripts/world/: AutoTool.lua  BlockIn.lua  FastPlace.lua  Scaffold.lua
