[workspace]
resolver = "2"
members = ["injector", "agent_loader", "client", "launcher"]

[workspace.package]
version = "0.1.65"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
log = "0.4"
simplelog = "0.12"
anyhow = "1.0"
libc = "0.2"
jni = "0.21"
sysinfo = "0.37"
egui = { version = "0.29", default-features = false, features = ["default_fonts"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
