[package]
name = "client"
version.workspace = true
edition.workspace = true

[lib]
name = "anemoia_client"
crate-type = ["cdylib"]

[dependencies]
log.workspace = true
simplelog.workspace = true
anyhow.workspace = true
libc.workspace = true
jni = { version = "0.21" }
# Lua 5.4, compiled from source — no system Lua dependency.
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
# x64 inline hooking for glXSwapBuffers tick delivery.
ilhook = "2.3"
parking_lot = "0.12"
# GUI overlay rendered inside the glXSwapBuffers hook.
egui = { version = "0.29", default-features = false, features = ["default_fonts"] }
egui_glow = { version = "0.29", default-features = false }
glow = "0.14"
ureq = { version = "2.10", features = ["json"] }
serde_json = "1.0"
base64 = "0.22"
