[package]
name = "injector"
version.workspace = true
edition.workspace = true

[[bin]]
name = "anemoia-inject"
path = "src/main.rs"

[dependencies]
log.workspace = true
simplelog.workspace = true
anyhow.workspace = true
sysinfo.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
proc-maps = "0.4.0"
libc = { workspace = true }
